<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cara_mencuci_tangan_dengan_benar"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="395dp"
        android:layout_height="182dp"
        android:layout_marginTop="80sp"
        android:src="@drawable/cucitangan" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gambar1"
        android:layout_marginTop="5dp"
        android:text="@string/_1_basahi_tangan_dengan_air"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp"
        android:text="@string/_2_tuang_sabun_pada_tangan_secukupnya_untuk_menutupi_semua_permukaan_tangan"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:text="@string/_3_gosok_telapak_tangan_yang_satu_ke_telapak_tangan_lainnya"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginTop="10dp"
        android:text="@string/_4_gosok_punggung_tangan_dan_sela_jari"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="10dp"
        android:text="@string/_5_gosok_punggung_jari_ke_telapak_tangan_dengan_posisi_jari_saling_bertautan"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:layout_marginTop="10dp"
        android:text="@string/_6_genggam_dan_basuh_ibu_jari_dengan_posisi_memutar"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_marginTop="10dp"
        android:text="@string/_7_gosok_bagian_ujung_jari_ke_telapak_tangan_agar_bagian_kuku_terkena_sabun"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text7"
        android:layout_marginTop="10dp"
        android:text="@string/_8_gosok_tangan_yang_bersabun_dengan_air_mengalir"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text8"
        android:layout_marginTop="10dp"
        android:text="@string/_9_keringkan_tangan_dengan_lap_sekali_pakai"
        android:textSize="15sp"
        android:typeface="serif" />


</RelativeLayout>

