<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cara_memakai_masker_dengan_benar"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="395dp"
        android:layout_height="128dp"
        android:layout_marginTop="80sp"
        android:src="@drawable/masker" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gambar1"
        android:layout_marginTop="5dp"
        android:text="@string/_1_pastikan_ukuran_masker_hidung_cocok_dengan_wajah_anda_tidak_kebesaran_ataupun_kekecilan"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="10dp"
        android:text="@string/_2_mencuci_tangan_dengan_sabun_dan_air_mengalir_atau_hand_sanitizer_terlebih_dahulu_sebelum_memakai_masker"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="10dp"
        android:text="@string/cari_sisi_luar_masker_luar_berwarna_hijau_dalam_berwarna_putih"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginTop="10dp"
        android:text="@string/tentukan_sisi_atas_masker_biasanya_ditandai_dengan_adanya_garis_kawat_hidung"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="10dp"
        android:text="@string/_4_untuk_jenis_masker_karet_anda_hanya_perlu_mengaitkan_tali_karet_di_belakang_kedua_telinga"
        android:textSize="15sp"
        android:typeface="serif" />


    <TextView
        android:id="@+id/text6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text5"
        android:layout_marginTop="10dp"
        android:text="@string/setelah_masker_sudah_terpasang_aman_di_wajah_cubit_atau_cocokkan_bagian_kawatnya_untuk_mengikuti_lekuk_hidung_anda_agar_masker_lebih_tertutup_rapat"
        android:textSize="15sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text6"
        android:layout_marginTop="10dp"
        android:text="@string/apabila_masker_sudah_terpasang_dengan_benar_hindari_menyentuh_masker_jika_ingin_menyentuh_masker_pastikan_untuk_mencuci_tangan_terlebih_dahulu"
        android:textSize="15sp"
        android:typeface="serif" />

</RelativeLayout>