<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pola_hidup_sehat_menurut_saya"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:typeface="serif" />

    <ImageView
        android:id="@+id/gambar1"
        android:layout_width="wrap_content"
        android:layout_height="250sp"
        android:layout_marginTop="80sp"
        android:src="@drawable/polasehat" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gambar1"
        android:layout_marginTop="20dp"
        android:text="@string/_1_makan_makanan_sehat_dan_begizi"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_marginTop="20dp"
        android:text="@string/_2_jaga_jam_tidur"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="20dp"
        android:text="@string/_3_olahraga_secara_teratur"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text3"
        android:layout_marginTop="20dp"
        android:text="@string/_4_mandi_2x_sehari"
        android:textSize="20sp"
        android:typeface="serif" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text4"
        android:layout_marginTop="20dp"
        android:text="@string/_5_hindari_hal_yang_membuat_stres"
        android:textSize="20sp"
        android:typeface="serif" />

</RelativeLayout>